
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/include ${KDL_INCLUDE_DIRS})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH} ${OPENCOLLADA_LIB_DIR} ${KDL_LINK_DIRS})

SET(KDLCOLLADA_EXAMPLES_LIBS kdl-collada ${KDL_LIBS})

ADD_EXECUTABLE(helloworld helloworld.cpp)

TARGET_LINK_LIBRARIES(helloworld ${KDLCOLLADA_EXAMPLES_LIBS})
