
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/include ${KDL_INCLUDE_DIRS})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH} ${OPENCOLLADA_LIB_DIR} ${KDL_LINK_DIRS})

SET(KDLCOLLADA_EXAMPLES_LIBS kdl-collada ${KDL_LIBS})

ADD_EXECUTABLE(import import.cpp)

TARGET_LINK_LIBRARIES(import ${KDLCOLLADA_EXAMPLES_LIBS})


ADD_EXECUTABLE(export export.cpp)

TARGET_LINK_LIBRARIES(export ${KDLCOLLADA_EXAMPLES_LIBS})
